{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 30,
  "lineage": "e98e2406-a7ef-abaf-aaa1-89787c57e355",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_gke_node_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-29T11:40:37.805-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/level-agent-460100-t6/global/firewalls/shaimaa-allow-gke-node-ports",
            "log_config": [],
            "name": "shaimaa-allow-gke-node-ports",
            "network": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/global/networks/shaimaa-vpc",
            "priority": 1000,
            "project": "level-agent-460100-t6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/global/firewalls/shaimaa-allow-gke-node-ports",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gke-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.shaimaa_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-29T11:40:37.963-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/level-agent-460100-t6/global/firewalls/shaimaa-allow-gcp-health-checks",
            "log_config": [],
            "name": "shaimaa-allow-gcp-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/global/networks/shaimaa-vpc",
            "priority": 1000,
            "project": "level-agent-460100-t6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/global/firewalls/shaimaa-allow-gcp-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.shaimaa_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-05-29T11:29:46.763-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/level-agent-460100-t6/global/firewalls/shaimaaallow-internal",
            "log_config": [],
            "name": "shaimaaallow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/global/networks/shaimaa-vpc",
            "priority": 65534,
            "project": "level-agent-460100-t6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/global/firewalls/shaimaaallow-internal",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.shaimaa_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_management",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-29T11:40:37.947-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/level-agent-460100-t6/global/firewalls/shaimaa-allow-ssh-management-subnet",
            "log_config": [],
            "name": "shaimaa-allow-ssh-management-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/global/networks/shaimaa-vpc",
            "priority": 100,
            "project": "level-agent-460100-t6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/global/firewalls/shaimaa-allow-ssh-management-subnet",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "iap-access"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.shaimaa_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250523",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/zones/europe-west6-a/disks/shaimaa-private-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/level-agent-460100-t6/zones/europe-west6-a/instances/shaimaa-private-vm",
            "instance_id": "1770450591228959070",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "ACS4jSl6u38=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\napt-get install -y git docker.io\ncurl -sSL https://sdk.cloud.google.com | bash\necho \"export PATH=$PATH:/root/google-cloud-sdk/bin\" \u003e\u003e /root/.bashrc\ncurl -LO \"https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl\"\nchmod +x kubectl\nmv kubectl /usr/local/bin/\n",
            "name": "shaimaa-private-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/global/networks/shaimaa-vpc",
                "network_ip": "10.10.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/regions/europe-west6/subnetworks/shaimaa-management-subnet",
                "subnetwork_project": "level-agent-460100-t6"
              }
            ],
            "project": "level-agent-460100-t6",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/zones/europe-west6-a/instances/shaimaa-private-vm",
            "service_account": [
              {
                "email": "shaimaa-vm-sa@level-agent-460100-t6.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "iap-access"
            ],
            "tags_fingerprint": "DJ2TjF6C9LQ=",
            "zone": "europe-west6-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.ubuntu_image",
            "google_compute_network.shaimaa_custom_vpc",
            "google_compute_subnetwork.management_subnet",
            "google_service_account.vm_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "shaimaa_custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/level-agent-460100-t6/global/networks/shaimaa-vpc",
            "mtu": 0,
            "name": "shaimaa-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5859708324053064044",
            "project": "level-agent-460100-t6",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/global/networks/shaimaa-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-29T11:29:46.646-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/level-agent-460100-t6/regions/europe-west6/routers/shaimaa-nat-router",
            "name": "shaimaa-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/global/networks/shaimaa-vpc",
            "project": "level-agent-460100-t6",
            "region": "europe-west6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/regions/europe-west6/routers/shaimaa-nat-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.shaimaa_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "level-agent-460100-t6/europe-west6/shaimaa-nat-router/shaimaa-nat-config",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "shaimaa-nat-config",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "level-agent-460100-t6",
            "region": "europe-west6",
            "router": "shaimaa-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/regions/europe-west6/subnetworks/shaimaa-management-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.shaimaa_custom_vpc",
            "google_compute_router.nat_router",
            "google_compute_subnetwork.management_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "management_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-29T11:29:47.139-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/level-agent-460100-t6/regions/europe-west6/subnetworks/shaimaa-management-subnet",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "shaimaa-management-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/global/networks/shaimaa-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "level-agent-460100-t6",
            "purpose": "PRIVATE",
            "region": "europe-west6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/regions/europe-west6/subnetworks/shaimaa-management-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.shaimaa_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "restricted_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-29T11:29:47.034-07:00",
            "gateway_address": "10.10.2.1",
            "id": "projects/level-agent-460100-t6/regions/europe-west6/subnetworks/shaimaa-restricted-subnet",
            "ip_cidr_range": "10.10.2.0/24",
            "name": "shaimaa-restricted-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/global/networks/shaimaa-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "level-agent-460100-t6",
            "purpose": "PRIVATE",
            "region": "europe-west6",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.184.0.0/14",
                "range_name": "gke-shaimaa-private-gke-cluster-pods-cf5c5add"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/level-agent-460100-t6/regions/europe-west6/subnetworks/shaimaa-restricted-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.shaimaa_custom_vpc"
          ]
        }
      ]
    }
  ]
}